add status endpoint and fixes
