# src/routes.js
@@ -37,6 +37,7 @@ sessionRouter.use(middleware.sessionSwagger)
 routes.use('/session', sessionRouter)
 
 sessionRouter.get('/start/:sessionId', middleware.sessionNameValidation, sessionController.startSession)
+sessionRouter.get('/status/:sessionId', middleware.sessionNameValidation, sessionController.statusSession)
 sessionRouter.get('/terminate/:sessionId', middleware.sessionNameValidation, sessionController.terminateSession)
 sessionRouter.get('/terminateInactive', sessionController.terminateInactiveSessions)
 sessionRouter.get('/terminateAll', sessionController.terminateAllSessions)
@@ -174,7 +175,7 @@ contactRouter.post('/unblock/:sessionId', [middleware.sessionNameValidation, mid
  */
 if (enableSwaggerEndpoint) {
   routes.use('/api-docs', swaggerUi.serve)
-  routes.get('/api-docs', swaggerUi.setup(swaggerDocument))
+  routes.get('/api-docs', swaggerUi.setup(swaggerDocument) /* #swagger.ignore = true */)
 }
 
 module.exports = { routes }
