# swagger.json
@@ -5,6 +5,7 @@
     "description": "API Wrapper for WhatsAppWebJS",
     "version": "1.0.0"
   },
+  "host": "",
   "tags": [
     {
       "name": "Session",
@@ -62,6 +63,36 @@
       }
     },
     "/session/start/{sessionId}": {
+      "get": {
+        "tags": [
+          "Session"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "sessionId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Unique identifier for the session (alphanumeric and - allowed)",
+            "example": "f8377d8d-a589-4242-9ba6-9486a04ef80c"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      }
+    },
+    "/session/status/{sessionId}": {
       "get": {
         "tags": [
           "Session"
